# New-Algorithm-for-Post-Quantum-Cryptography

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  QuantaWeaveGUI.spec  README.md  SUMMARY.md  TODO.md  encapsulation_decapsulation.py  key_generation.py  kyber_dilithium_hqc.py  kyber_dilithium_saber.py  move_file.py  mypy.ini  pyproject.toml  requirements-dev.txt  results_v2.md  ruff.toml  setup.py
docs/: ALGORITHM.md  GUI.md  HQC_PORTING_MAP.md  KYBER_INTEGRATION_PLAN.md  PRODUCTION.md  RELEASE.md  SECURITY.md  algo_docs.md
examples/: basic_usage.py  benchmark.py  falcon_signature.py  hqc_kem_usage.py  hybrid_usage_example.py  hybrid_xor_combiner_example.py  multi_party.py
gui/: cli_test1.py  quantaweave_gui.py
installers/: QuantaWeaveGUI.iss
pqcrypto/: __init__.py  core.py  encryption.py  keygen.py  kyber_dilithium_saber.py  math_utils.py  parameters.py  pqcrypto_suite.py
quantaweave/: ## Chat Customization Diagnostics.md  __init__.py  _falcon.py  _falcon_bindings.cpp  _fips202_wrapper.cpp  core.py  dilithium.py  dilithium_bindings.py  encryption.py  falcon.py  keygen.py  kyber.py  kyber_dilithium_saber.py  new_algorithm.py  parameters.py  pq_schemes.py  pq_schemes_clean.py  pq_unified_interface.py  rsa_gcm.py  woven_algorithm.py
scripts/: check_vect_mul.py  generate_benchmark_baseline.py  hqc_debug_temp.py
tests/: benchmarks_baseline.json  test_benchmarks.py  test_crypto.py  test_falcon_sig.py  test_hqc_kem.py  test_hybrid_all_kems_and_sigs.py  test_hybrid_pq.py  test_hybrid_threshold_signature.py  test_kem_tests.py  test_kyber_dilithium.py  (+7 more)
(+23 files in other folders)
