[build-system]
requires = ["setuptools>=69", "wheel", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "quantaweave-pqc"
version = "0.1.0"
description = "QuantaWeave post-quantum cryptography library with LWE encryption and HQC KEM"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Oliver Breen" }]
dependencies = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security :: Cryptography",
]

[project.optional-dependencies]
dev = [
  "ruff==0.6.8",
  "mypy==1.11.2",
  "build==1.2.2",
]
gui = [
  "PyQt6>=6.6",
  "pyinstaller>=6.6",
]

[project.urls]
Homepage = "https://github.com/oliver-breen/New-Algorithm-for-Post-Quantum-Cryptography"
Repository = "https://github.com/oliver-breen/New-Algorithm-for-Post-Quantum-Cryptography"

[tool.setuptools.packages.find]
where = ["."]
include = ["quantaweave*"]

[tool.setuptools]
include-package-data = true
